# GMTK_Jam_2020_SpaceGame

./: .gitmodules  CMakeLists.txt
CMake/: install.cmake
LicenseFolder/: gamebackbone.txt
ProjectTemplateExe/: CMakeLists.txt
ProjectTemplateExe/source/: main.cpp
ProjectTemplateLib/: CMakeLists.txt
ProjectTemplateLib/include/ProjectTemplate/Core/: BeatTutorialRegion.h  DataPad.h  EventController.h  GameLostRegion.h  InputRecorder.h  MainMenuRegion.h  Ship.h  ShipControlTerminalRegion.h  TemplateRegion.h  Terminal.h  TerminalHub.h  TerminalOne.h  TerminalRegion.h  TerminalTutorial.h
ProjectTemplateLib/include/ProjectTemplate/TopDown/: GameObject.h  Player.h  Terminal.h  TopDownRegion.h  TopDownShip.h
ProjectTemplateLib/include/ProjectTemplate/Utils/: DisplayText.h  GestureBindUtils.h
ProjectTemplateLib/source/Core/: BeatTutorialRegion.cpp  DataPad.cpp  EventController.cpp  GameLostRegion.cpp  InputRecorder.cpp  MainMenuRegion.cpp  Ship.cpp  ShipControlTerminalRegion.cpp  Terminal.cpp  TerminalHub.cpp  TerminalOne.cpp  TerminalRegion.cpp  TerminalTutorial.cpp
ProjectTemplateLib/source/TopDown/: GameObject.cpp  Player.cpp  Terminal.cpp  TopDownRegion.cpp  TopDownShip.cpp
SelbaWard/: CMakeLists.txt
